--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
 					<p>For official purposes, my legal first name is Jong Sung. I go by Jason, nevertheless, for two reasons: it’s easier to pronounce, and most websites that parse my name delimit the space and call me Jong. Call me by whatever is easiest for you! My pronouns are <b>he, him, and his.</b></p>
 					<br>
 					<h2>I'm a Junior</h2>
-					<p>At the University of Michigan in Ann Arbor, MI. I study Computer Science through the College of Engineering, and minor in Biology through the College of Literature, Science, and the Arts. I am passionate about cybersecurity and medical software development (bioinformatics, computer vision and ML, databases, etc.), and one day I hope to contribute to the automation of diagnosing and treating diseases for accessible and affordable healthcare worldwide. For the 2019-2020 school year, I am actively seeking a position in research or an internship related to my aforementioned interests.</p>
+					<p>At the University of Michigan in Ann Arbor, MI. I study Computer Science through the College of Engineering, and minor in Biology through the College of Literature, Science, and the Arts. I am passionate about cybersecurity and medical software development (bioinformatics, computer vision and ML, databases, etc.), and one day I hope to contribute to the automation of diagnosing and treating diseases for accessible and affordable healthcare worldwide.</p>
 					<br>
 					<h2>I develop</h2>
-					<p>In C++, C, and Java proficiently. I have been picking up lots of Python recently from academic projects. Writing this website has improved my HTML and CSS skills. Some more languages that I speak here and there are Bash, MATLAB, JavaScript, SQL, and some flavors of assembly (x86, MIPS, ARMv8).</p>
+					<p>In C++, C, Java, and Python proficiently. Writing this website has improved my HTML and CSS skills (which I have picked up more with Web Systems). Some more languages that I speak here and there are Bash, MATLAB, JavaScript (React and jQuery), SQL, and some flavors of assembly (x86, MIPS, ARMv8).</p>
 					<br>
 					<h2>My website</h2>
 					<p>Is also available in 한국어 (Korean), my mother tongue alongside English, as well as Español (Spanish) which I <i>kind of</i> speak. Feel free to grab a copy of my resume or contact me through the links on the left!</p>
