--- a/korean/projects-kr.html
+++ b/korean/projects-kr.html
@@ -106,7 +106,7 @@
 		</div>
 		<div class="row project">
 			<div class="col">
-				<h3><a href="https://github.com/jasonkimprojects/rosalind-challenge" class="name">Rosalind (Python) - 진행 중</a></h3>
+				<h3><a href="https://github.com/jasonkimprojects/rosalind-challenge" class="name">Rosalind (Python)</a></h3>
 				<h6>
 					<span class="badge badge-light">생물정보학</span>
 					<span class="badge badge-light">전산 생물학</span>
@@ -119,18 +119,18 @@
 					<span class="badge badge-light">조합론과 확률</span>
 					<span class="badge badge-light">수열과 급수</span>
 				</h6>
-				<p>Rosalind <a href="http://rosalind.info/about/" class="name">(홈페이지 링크)</a> 는 생물정보학과 관련된 프로그래밍 질문과 알고리즘을 제공하는 기반입니다. 캘리포니아 대학교 샌디에이고, 러시아 상트페테르부르크 아카데미 대학, 그리고 러시아 과학 협회가 공동으로 관리합니다. 저의 저장소는 Rosalind의 문제에 대해 Python으로 구현된 저의 해법을 담고 있으며, 문제 아이디를 기준으로 나열되어 있습니다. 2019년 8월 7일자로, 저는 해결한 문제의 갯수를 기준으로 상위 1% 내의 유저가 되었습니다.</p> 
+				<p>Rosalind <a href="http://rosalind.info/about/" class="name">(홈페이지 링크)</a> 는 생물정보학과 관련된 프로그래밍 질문과 알고리즘을 제공하는 기반입니다. 캘리포니아 대학교 샌디에이고, 러시아 상트페테르부르크 아카데미 대학, 그리고 러시아 과학 협회가 공동으로 관리합니다. 저의 저장소는 Rosalind의 문제에 대해 Python으로 구현된 저의 해법을 담고 있으며, 문제 아이디를 기준으로 나열되어 있습니다. 2019년 8월 7일자로, 저는 해결한 문제의 갯수를 기준으로 상위 1% 내의 유저가 되었습니다.</p>
 			</div>
 		</div>
 		<div class="row project">
 			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/bitmapparser" class="name">BitmapParser (C++)</a></h3>
 				<h6>
-					<span class="badge badge-light">라이브러리</span> 
-					<span class="badge badge-light">파일 입출력</span> 
-					<span class="badge badge-light">이미지 편집</span> 
-					<span class="badge badge-light">자료 구조</span> 
-					<span class="badge badge-light">오류 처리</span> 
+					<span class="badge badge-light">라이브러리</span>
+					<span class="badge badge-light">파일 입출력</span>
+					<span class="badge badge-light">이미지 편집</span>
+					<span class="badge badge-light">자료 구조</span>
+					<span class="badge badge-light">오류 처리</span>
 					<span class="badge badge-light">객체 지향 프로그래밍</span>
 				</h6>
 				<p>비트맵 이미지를 읽고 쓰기 위한 작은 라이브러리입니다. 대칭, 전치, 회전, 자르기, 겹치기, 색 필터 등의 간단한 편집 기능도 지원합니다. 이미지에서 픽셀과 RGB 색상 값을 행렬로 출력할 때 유용합니다.</p>
@@ -140,11 +140,11 @@
 			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/easylsb" class="name">EasyLSB (C++)</a></h3>
 				<h6>
-					<span class="badge badge-light">스테가노그래피</span> 
-					<span class="badge badge-light">최하위 비트</span> 
-					<span class="badge badge-light">비트 조작</span> 
-					<span class="badge badge-light">오류 처리</span> 
-					<span class="badge badge-light">객체 상속</span> 
+					<span class="badge badge-light">스테가노그래피</span>
+					<span class="badge badge-light">최하위 비트</span>
+					<span class="badge badge-light">비트 조작</span>
+					<span class="badge badge-light">오류 처리</span>
+					<span class="badge badge-light">객체 상속</span>
 					<span class="badge badge-light">맞춤형 반복자</span>
 				</h6>
 				<p>최하위 비트 스테가노그래피를 사용하여 비트맵 이미지 속 메시지를 읽고 쓰는 프로그램입니다. 숨겨진 메시지가 담긴 이미지는 육안으로 볼 때 원본과 거의 차이가 없습니다. 이 프로그램은 저의 BitmapParser 라이브러리를 포함합니다.</p>
@@ -160,14 +160,14 @@
 			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/htc-evo-4gplus-evolved" class="name">Evo(lved) (Android)</a></h3>
 				<h6>
-					<span class="badge badge-light">맞춤형 펌웨어</span> 
-					<span class="badge badge-light">스크립트</span> 
-					<span class="badge badge-light">리눅스</span> 
+					<span class="badge badge-light">맞춤형 펌웨어</span>
+					<span class="badge badge-light">스크립트</span>
+					<span class="badge badge-light">리눅스</span>
 					<span class="badge badge-light">최적화</span>
 				</h6>
 				<p>저의 첫 스마트폰, HTC Evo 4G+를 위한 커스텀 롬입니다. 순정 펌웨어를 기반으로 한 안드로이드 2.3 진저브레드입니다.</p>
 			</div>
-		</div>		
+		</div>
 		<div class="row project">
 			<div class="col">
 				<h1><b>조별 과제</b></h1>
@@ -178,9 +178,9 @@
 			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/2048-and-pong-from-scratch" class="name">2048 (Java, Swing)</a></h3>
 				<h6>
-					<span class="badge badge-light">게임</span> 
-					<span class="badge badge-light">행렬 작업</span> 
-					<span class="badge badge-light">GUI 프로그래밍</span> 
+					<span class="badge badge-light">게임</span>
+					<span class="badge badge-light">행렬 작업</span>
+					<span class="badge badge-light">GUI 프로그래밍</span>
 					<span class="badge badge-light">리스너</span>
 				</h6>
 				<p>고등학교 AP Computer Science 최종 프로젝트의 첫번째 부작이었습니다. 처음부터 시작하여 원본 게임의 레플리카를 구현하였습니다. Swing 위젯 툴킷을 사용한 그래픽, 그리고 키보드 입력을 주시하는 리스너를 연습할 기회였습니다.</p>
@@ -190,8 +190,8 @@
 			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/2048-and-pong-from-scratch" class="name">Pong (Java, Swing)</a></h3>
 				<h6>
-					<span class="badge badge-light">게임</span> 
-					<span class="badge badge-light">GUI 프로그래밍</span> 
+					<span class="badge badge-light">게임</span>
+					<span class="badge badge-light">GUI 프로그래밍</span>
 					<span class="badge badge-light">리스너</span>
 				</h6>
 				<p>고등학교 AP Computer Science 최종 프로젝트의 두번째 부작이었습니다. 이 역시 처음부터 시작하여 원본 게임의 레플리카를 구현하였고, 그래픽 기반 게임과 키보드 입력을 처리하는 또 하나의 연습이었습니다.</p>
@@ -201,9 +201,9 @@
 			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/java-blackjack" class="name">Blackjack (Java)</a></h3>
 				<h6>
-					<span class="badge badge-light">객제 지향 프로그래밍</span> 
-					<span class="badge badge-light">테스트</span> 
-					<span class="badge badge-light">자료 구조</span> 
+					<span class="badge badge-light">객제 지향 프로그래밍</span>
+					<span class="badge badge-light">테스트</span>
+					<span class="badge badge-light">자료 구조</span>
 					<span class="badge badge-light">오류 처리</span>
 				</h6>
 				<p>또 하나의 고등학교 AP Computer Science 프로젝트였으며, 제가 처음부터 만든 첫 번째 게임이었습니다. 명령 프롬프트를 통해 게임을 할 수 있으며, 여러 명의 인간 플레이어와 기초적인 컴퓨터 플레이어를 지원합니다.</p>
