--- a/spanish/coursework-es.html
+++ b/spanish/coursework-es.html
@@ -87,9 +87,6 @@
 				<div class="alert alert-success">
 					<p style="margin-bottom: 0px">La siguiente es una lista de clases que he tomado a la <a href="https://umich.edu" style="color: #FFA500">Universidad de Míchigan.</a> He listado los proyectos de programación junto a cada clase donde sea aplicable. Estoy obligado al Engineering Honor Code en la U-M a no liberar los proyectos al público. Por consiguiente lo más que puedo decir del trabajo es una descripción corta. Para más información, haga click <a href="https://elc.engin.umich.edu/policies-and-interpretations/" style="color: #FFA500">aquí.</a></p>
 				</div>
-				<div class="alert alert-warning">
-					<p style="margin-bottom: 0px">Este semestre del otoño 2019, estoy inscrito en EECS 376 (Fundaciones de Ciencias de la Computación) y EECS 485 (Sistemas Web). Actualizaré esta página web con mi trabajo de los proyectos en esas clases después de finalizárlas.</p>
-				</div>
 			</div>
 		</div>
 		<div class="row course">
@@ -98,6 +95,41 @@
 				<hr>
 			</div>
 		</div>
+    <div class="row course">
+      <div class="col">
+        <h3>485, Sistemas Web</h3>
+        <p><a href="https://eecs485staff.github.io/eecs485.org/assets/Syllabus.pdf" class="syllabus">Enlace al programa de estudios (Inglés)</a></p>
+        <p>
+          <b>Proyectos en Python:</b>
+        </p>
+        <ul>
+          <li>
+            <p>
+              Un clon de Instagram estático y templado como un ejercicio en analizando JSON y escribiendo plantillas en jinja2.
+            </p>
+          </li>
+          <li>
+            <p>
+              El clon con lado del servidor basado en el proyecto pasado. He integrado las base de datos con SQLite3, que lo hizo posible crear cuentas de usuarios y postes nuevos. He manejado el lado de servidor con Python/Flask.
+            </p>
+          </li>
+          <li>
+            <p>
+              Una extensión en el lado del cliente. He rediseñado completamente la página principal con React y un REST API adicional en el servidor. Esto lo hizo posible un desplazamiento infinito, tanto como actualizar gustos y comentarios en tiempo real.
+            </p>
+          </li>
+          <li>
+            <p>
+              MapReduce maestro y trabajador interfaz compatible con Apache Hadoop. Un ejercicio con enchufes y la programación multiproceso. He implementado latidos del corazón y tolerancia a fallos.
+            </p>
+          </li>
+          <li>
+            <p>
+              Buscador de Wikipedia. He implementado una tubería MapReduce para crear un índice invertido desde una lista de documentos. El buscador contiene dos servidores, uno para archivar el índice invertido en una estructura de datos eficiente, y un otro para servir consultas de busqueda. Ambos usaron REST APIs, uno de los cuales el interfaz implementado en React confió para extraer información.
+          </li>
+        </ul>
+      </div>
+    </div>
 		<div class="row course">
 			<div class="col">
 				<h3>388, Introducción a la Seguridad Informática</h3>
