--- a/spanish/index-es.html
+++ b/spanish/index-es.html
@@ -131,10 +131,10 @@
 					<p>Para propósitos oficiales, mi nombre legal es Jong Sung. Me llamo Jason, sin embargo, por dos razones: es más fácil de pronunciar, y la mayoría de sitios web que analizan mi nombre delimita el espacio y me llama Jong. ¡Llámeme por lo que sea más fácil para usted!</b></p>
 					<br>
 					<h2>Estoy en el 3er grado</h2>
-					<p>A la Universidad de Míchigan, situada en Ann Arbor, MI. Mi especialización es ciencias de la computación en el Colegio de Ingeniería  y mi subespecialización es biología en el Colegio de Literatura, Ciencia, y los Artes. Soy apasionado sobre seguridad cibernética y desarrollo de software médico, como bioinformática, visión por computador, aprendizaje automático, bases de datos, etc. Un día, espero contribuir a la automatización de diagnosticar y tratar enfermedades para cuidado de la salud accesible y asequible en todo el mundo. Para el 2019-2020 año escolar, estoy buscando activamente a una posición en estudios o un internado relacionada a mis intereses mencionados anteriormente.</p>
+					<p>A la Universidad de Míchigan, situada en Ann Arbor, MI. Mi especialización es ciencias de la computación en el Colegio de Ingeniería  y mi subespecialización es biología en el Colegio de Literatura, Ciencia, y los Artes. Soy apasionado sobre seguridad cibernética y desarrollo de software médico, como bioinformática, visión por computador, aprendizaje automático, bases de datos, etc. Un día, espero contribuir a la automatización de diagnosticar y tratar enfermedades para cuidado de la salud accesible y asequible en todo el mundo.</p>
 					<br>
 					<h2>Yo desarrollo</h2>
-					<p>En C++, C, y Java hábilmente. He estado aprendiendo mucho Python recientemente de proyectos academicos. Escribir este sitio web ha mejorado mis habilidades en HTML y CSS. Algunos idiomas más que hablo más o menos son Bash, MATLAB, JavaScript, SQL, y algunos tipos de assembly (x86, MIPS, ARMv8).</p>
+					<p>En C++, C, y Java hábilmente. He estado aprendiendo mucho Python recientemente de proyectos academicos. Escribir este sitio web ha mejorado mis habilidades en HTML y CSS. Algunos idiomas más que hablo más o menos son Bash, MATLAB, JavaScript (React y jQuery), SQL, y algunos tipos de assembly (x86, MIPS, ARMv8).</p>
 					<br>
 					<h2>Mi sitio web</h2>
 					<p>Es disponible también en Inglés y Coreano, mis lenguas maternas, además de Español. ¡Tome una copia de mi currículum o contáctese conmigo por las conexiones a la izquierda!</p>
