--- a/spanish/projects-es.html
+++ b/spanish/projects-es.html
@@ -108,7 +108,7 @@
 		</div>
 		<div class="row project">
 			<div class="col">
-				<h3><a href="https://github.com/jasonkimprojects/rosalind-challenge" class="name">Rosalind (Python) - En Progreso</a></h3>
+				<h3><a href="https://github.com/jasonkimprojects/rosalind-challenge" class="name">Rosalind (Python)</a></h3>
 				<h6>
 					<span class="badge badge-light">Bioinformática</span>
 					<span class="badge badge-light">Biología computacional</span>
@@ -121,18 +121,18 @@
 					<span class="badge badge-light">Combinatoria y probabilidad</span>
 					<span class="badge badge-light">Secuencias y series</span>
 				</h6>
-				<p>Rosalind <a href="http://rosalind.info/about/" class="name">(Enlace al sitio web)</a> es una plataforma para problemas y algoritmos de programación bioinformática. Es un proyecto conjunto entre la Universidad de California en San Diego, Universidad Académica de San Petersburgo, y la Academia Rusa de Ciencias. Mi cuenta GitHub contiene mis soluciones propias a los problemas de Rosalind, implementadas en Python y listadas por ID del problema. A partir del 7 de agosto 2019, estoy en el 1% superior de usuarios por número de problemas resueltos.</p> 
+				<p>Rosalind <a href="http://rosalind.info/about/" class="name">(Enlace al sitio web)</a> es una plataforma para problemas y algoritmos de programación bioinformática. Es un proyecto conjunto entre la Universidad de California en San Diego, Universidad Académica de San Petersburgo, y la Academia Rusa de Ciencias. Mi cuenta GitHub contiene mis soluciones propias a los problemas de Rosalind, implementadas en Python y listadas por ID del problema. A partir del 7 de agosto 2019, estoy en el 1% superior de usuarios por número de problemas resueltos.</p>
 			</div>
 		</div>
 		<div class="row project">
 			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/bitmapparser" class="name">BitmapParser (C++)</a></h3>
 				<h6>
-					<span class="badge badge-light">Librería</span> 
-					<span class="badge badge-light">Entrada y salida de archivos</span> 
-					<span class="badge badge-light">Procesamiento de imágenes</span> 
-					<span class="badge badge-light">Estructuras de datos</span> 
-					<span class="badge badge-light">Manejo de errores</span> 
+					<span class="badge badge-light">Librería</span>
+					<span class="badge badge-light">Entrada y salida de archivos</span>
+					<span class="badge badge-light">Procesamiento de imágenes</span>
+					<span class="badge badge-light">Estructuras de datos</span>
+					<span class="badge badge-light">Manejo de errores</span>
 					<span class="badge badge-light">Programación orientada a objetos</span>
 				</h6>
 				<p>Una librería corta para leer y escribir imágenes bitmap. Contiene funciones básicas para editar imágenes (reflejar, transponer, girar, cortar, sobreponer, filtros de color). Conveniente para extraer píxeles y sus valores RGB como vectores de estructuras.</p>
@@ -142,11 +142,11 @@
 			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/easylsb" class="name">EasyLSB (C++)</a></h3>
 				<h6>
-					<span class="badge badge-light">Esteganografía</span> 
-					<span class="badge badge-light">Bit menos significativo</span> 
-					<span class="badge badge-light">Manipulación de bits</span> 
-					<span class="badge badge-light">Manejo de errores</span> 
-					<span class="badge badge-light">Herencia</span> 
+					<span class="badge badge-light">Esteganografía</span>
+					<span class="badge badge-light">Bit menos significativo</span>
+					<span class="badge badge-light">Manipulación de bits</span>
+					<span class="badge badge-light">Manejo de errores</span>
+					<span class="badge badge-light">Herencia</span>
 					<span class="badge badge-light">Iterador personalizado</span>
 				</h6>
 				<p>Un programa para cifrar y decifrar mensajes de texto adentro de imágenes bitmap usando esteganografía del bit menos significativo. Resulta en poco o no diferencia visible en la imagen. Incluye mi librería BitmapParser.</p>
@@ -162,14 +162,14 @@
 			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/htc-evo-4gplus-evolved" class="name">Evo(lved) (Android)</a></h3>
 				<h6>
-					<span class="badge badge-light">Firmware personalizado</span> 
-					<span class="badge badge-light">Scripting</span> 
-					<span class="badge badge-light">Linux</span> 
+					<span class="badge badge-light">Firmware personalizado</span>
+					<span class="badge badge-light">Scripting</span>
+					<span class="badge badge-light">Linux</span>
 					<span class="badge badge-light">Mejoramiento</span>
 				</h6>
 				<p>ROM para mi primero teléfono inteligente, el HTC Evo 4G+. Android 2.3 Gingerbread basado en el firmware del valor por defecto.</p>
 			</div>
-		</div>		
+		</div>
 		<div class="row project">
 			<div class="col">
 				<h1><b>Proyectos Colaborativos</b></h1>
@@ -180,9 +180,9 @@
 			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/2048-and-pong-from-scratch" class="name">2048 (Java, Swing)</a></h3>
 				<h6>
-					<span class="badge badge-light">Videojuegos</span> 
-					<span class="badge badge-light">Operaciones de matriz </span> 
-					<span class="badge badge-light">Programación de GUI</span> 
+					<span class="badge badge-light">Videojuegos</span>
+					<span class="badge badge-light">Operaciones de matriz </span>
+					<span class="badge badge-light">Programación de GUI</span>
 					<span class="badge badge-light">Oyentes</span>
 				</h6>
 				<p>La 1a parte del proyecto final de AP Computer Science durante la escuela secundaria. Una réplica del videojuego original hecha desde cero. Un ejercicio para gráficos con el Swing kit de herramientas de aparatos y uno para oir a entradas del teclado.</p>
@@ -192,8 +192,8 @@
 			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/2048-and-pong-from-scratch" class="name">Pong (Java, Swing)</a></h3>
 				<h6>
-					<span class="badge badge-light">Videojuegos</span> 
-					<span class="badge badge-light">Programación de GUI</span> 
+					<span class="badge badge-light">Videojuegos</span>
+					<span class="badge badge-light">Programación de GUI</span>
 					<span class="badge badge-light">Oyentes</span>
 				</h6>
 				<p>La 2a parte del proyecto final de AP Computer Science durante la escuela secundaria. Una réplica del videojuego original, hecha desde cero también. Un otro ejercicio para hacer videojuegos gráficos y oir a entradas del teclado.</p>
@@ -203,9 +203,9 @@
 			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/java-blackjack" class="name">Blackjack (Java)</a></h3>
 				<h6>
-					<span class="badge badge-light">Programación orientada a objetos</span> 
-					<span class="badge badge-light">Pruebas</span> 
-					<span class="badge badge-light">Estructuras de datos</span> 
+					<span class="badge badge-light">Programación orientada a objetos</span>
+					<span class="badge badge-light">Pruebas</span>
+					<span class="badge badge-light">Estructuras de datos</span>
 					<span class="badge badge-light">Manejo de errores</span>
 				</h6>
 				<p>Un otro proyecto de AP Computer Science, y el primero videojuego que hice desde cero. Se juega en la línea de comando, y el videojuego soporte múltiples jugadores humanos tanto como jugadores de computadora ingenuinos.</p>
