--- a/korean/coursework-kr.html
+++ b/korean/coursework-kr.html
@@ -85,9 +85,6 @@
 				<div class="alert alert-success">
 					<p style="margin-bottom: 0px">다음은 제가 <a href="https://umich.edu" style="color: #FFA500">미시간 대학교</a> 에서 지금까지 수강한 수업의 목록입니다. 각각의 수업 하에는 그 수업의 프로그래밍 프로젝트를 나열하였습니다. 저는 미시간 대학교 공과대학의 학칙 (Honor Code) 으로 인하여 프로젝트의 소스 코드는 외부에 공개할 수 없습니다. 이로 인해 제가 학업 관련 프로젝트에 대해 공개할 수 있는 정도는 프로젝트에 대한 간단한 요약이 최대치입니다. 추가 정보를 보시려면 <a href="https://elc.engin.umich.edu/policies-and-interpretations/" style="color: #FFA500">여기</a>를 클릭하세요.</p>
 				</div>
-				<div class="alert alert-warning">
-					<p style="margin-bottom: 0px">이번 2019년 가을 학기에 저는 EECS 376 (컴퓨터 과학의 토대) 와 EECS 485 (웹 시스템) 을 수강하고 있습니다. 두 수업의 프로젝트 관련 업무는 수업을 완료한 후 이 페이지에 업데이트 하겠습니다.</p>
-				</div>
 			</div>
 		</div>
 		<div class="row course">
@@ -96,6 +93,40 @@
 				<hr>
 			</div>
 		</div>
+    <div class="row course">
+      <div class="col">
+        <h3>485, 웹 시스템</h3>
+        <p><a href="https://eecs485staff.github.io/eecs485.org/assets/Syllabus.pdf" class="syllabus">강의계획서 링크 (영문)</a></p>
+        <p><b>Python 프로젝트:</b></p>
+        <ul>
+          <li>
+            <p>
+              인스타그램을 모방한 SNS 플랫폼. 처음에는 고정된 페이지로 시작했습니다. JSON 양식의 해독과 jinja2 웹 페이지 각본을 쓰는 연습이었습니다.
+            </p>
+          </li>
+          <li>
+            <p>
+              Python/Flask로 서버사이드 처리를 추가한 인스타그램 모조품. 지난 프로젝트를 기반으로 SQLite3 데이터베이스를 추가하여 사용자들이 계정을 만들고 게시물을 작성할 수 있도록 변경했습니다.
+            </p>
+          </li>
+          <li>
+            <p>
+              클라이언트 사이드 처리를 겸용한 인스타그램 모조품. 시작 페이지를 React와 서버의 추가적인 REST API의 조합으로 완전히 새롭게 구현했습니다. 이는 무한 스크롤과 페이지를 새로고침하지 않고 좋아요와 댓글을 업데이트하는 것을 가능하게 했습니다.
+            </p>
+          </li>
+          <li>
+            <p>
+              MapReduce 마스터와 일꾼 인터페이스를 Apache Hadoop과 호환되도록 구현했습니다. 이는 소켓과 다중 스레드 프로그래밍에 대한 연습이었으며, 하트비트와 결함 감내 시스템도 포함되었습니다.
+            </p>
+          </li>
+          <li>
+            <p>
+              위키백과 검색 엔진. MapReduce 파이프라인을 이용하여 문서가 담긴 목록을 역색인으로 정리했습니다. 검색 엔진 자체는 두 개의 서버로 운영되며, 하나는 역색인을 효율적인 자료 구조로 저장하고 다른 하나는 사용자의 검색 단어를 처리합니다. 두 서버 모두 REST API를 채용했으며, 그 중 하나는 React로 구현된 UI가 정보를 구하는 용도로 사용됩니다.
+            </p>
+          </li>
+        </ul>
+      </div>
+    </div>
 		<div class="row course">
 			<div class="col">
 				<h3>388, 컴퓨터 보안으로의 입문</h3>
