--- a/projects.html
+++ b/projects.html
@@ -108,7 +108,7 @@
 		</div>
 		<div class="row project">
 			<div class="col">
-				<h3><a href="https://github.com/jasonkimprojects/rosalind-challenge" class="name">Rosalind (Python) - In Progress</a></h3>
+				<h3><a href="https://github.com/jasonkimprojects/rosalind-challenge" class="name">Rosalind (Python)</a></h3>
 				<h6>
 					<span class="badge badge-light">Bioinformatics</span>
 					<span class="badge badge-light">Computational Biology</span>
@@ -121,18 +121,18 @@
 					<span class="badge badge-light">Combinatorics and probability</span>
 					<span class="badge badge-light">Sequences and series</span>
 				</h6>
-				<p>Rosalind <a href="http://rosalind.info/about/" class="name">(Link to homepage)</a> is a platform for bioinformatics programming questions and algorithms. It is a "joint project between the University of California at San Diego, Saint Petersburg Academic University, and the Russian Academy of Sciences. Rosalind is partly funded by a Howard Hughes Medical Institute Professor Award and a Russian Megagrant Award received by Pavel Pevzner." My repository contains my own solutions to Rosalind's problems, implemented in Python and listed by problem ID. As of August 7, 2019, I rank within the top 1% of users by number of problems solved correctly.</p> 
+				<p>Rosalind <a href="http://rosalind.info/about/" class="name">(Link to homepage)</a> is a platform for bioinformatics programming questions and algorithms. It is a "joint project between the University of California at San Diego, Saint Petersburg Academic University, and the Russian Academy of Sciences. Rosalind is partly funded by a Howard Hughes Medical Institute Professor Award and a Russian Megagrant Award received by Pavel Pevzner." My repository contains my own solutions to Rosalind's problems, implemented in Python and listed by problem ID. As of August 7, 2019, I rank within the top 1% of users by number of problems solved correctly.</p>
 			</div>
 		</div>
 		<div class="row project">
 			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/bitmapparser" class="name">BitmapParser (C++)</a></h3>
 				<h6>
-					<span class="badge badge-light">Library</span> 
-					<span class="badge badge-light">File I/O</span> 
-					<span class="badge badge-light">Image processing</span> 
-					<span class="badge badge-light">Data structures</span> 
-					<span class="badge badge-light">Error handling</span> 
+					<span class="badge badge-light">Library</span>
+					<span class="badge badge-light">File I/O</span>
+					<span class="badge badge-light">Image processing</span>
+					<span class="badge badge-light">Data structures</span>
+					<span class="badge badge-light">Error handling</span>
 					<span class="badge badge-light">Object oriented programming</span>
 				</h6>
 				<p>A short library for bitmap image reading and writing. Contains basic image editing functions (reflection, transposition, rotation, crop, superimpose, color filters). Useful for extracting pixels and their RGB values as vectors of structs of plain old data.</p>
@@ -142,11 +142,11 @@
 			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/easylsb" class="name">EasyLSB (C++)</a></h3>
 				<h6>
-					<span class="badge badge-light">Steganography</span> 
-					<span class="badge badge-light">Least significant bit</span> 
-					<span class="badge badge-light">Bit manipulation</span> 
-					<span class="badge badge-light">Error handling</span> 
-					<span class="badge badge-light">Inheritance</span> 
+					<span class="badge badge-light">Steganography</span>
+					<span class="badge badge-light">Least significant bit</span>
+					<span class="badge badge-light">Bit manipulation</span>
+					<span class="badge badge-light">Error handling</span>
+					<span class="badge badge-light">Inheritance</span>
 					<span class="badge badge-light">Custom iterator</span>
 				</h6>
 				<p>A program for encoding and decoding text messages inside bitmap images using least significant bit steganography. Results in little to no visible difference in the image. Includes my BitmapParser library.</p>
@@ -162,14 +162,14 @@
 			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/htc-evo-4gplus-evolved" class="name">Evo(lved) (Android)</a></h3>
 				<h6>
-					<span class="badge badge-light">Custom firmware</span> 
-					<span class="badge badge-light">Scripting</span> 
-					<span class="badge badge-light">Linux</span> 
+					<span class="badge badge-light">Custom firmware</span>
+					<span class="badge badge-light">Scripting</span>
+					<span class="badge badge-light">Linux</span>
 					<span class="badge badge-light">Optimization</span>
 				</h6>
 				<p>ROM for my first smartphone, the HTC Evo 4G+. Android 2.3 Gingerbread based on stock firmware.</p>
 			</div>
-		</div>		
+		</div>
 		<div class="row project">
 			<div class="col">
 				<h1><b>Group Projects</b></h1>
@@ -180,9 +180,9 @@
 			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/2048-and-pong-from-scratch" class="name">2048 (Java, Swing)</a></h3>
 				<h6>
-					<span class="badge badge-light">Games</span> 
-					<span class="badge badge-light">Matrix operations</span> 
-					<span class="badge badge-light">GUI programming</span> 
+					<span class="badge badge-light">Games</span>
+					<span class="badge badge-light">Matrix operations</span>
+					<span class="badge badge-light">GUI programming</span>
 					<span class="badge badge-light">Listeners</span>
 				</h6>
 				<p>First part of AP Computer Science final project during high school. Replica of the original game built from scratch. Exercise for graphics with the Swing widget toolkit and listening to keyboard inputs.</p>
@@ -192,8 +192,8 @@
 			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/2048-and-pong-from-scratch" class="name">Pong (Java, Swing)</a></h3>
 				<h6>
-					<span class="badge badge-light">Games</span> 
-					<span class="badge badge-light">GUI programming</span> 
+					<span class="badge badge-light">Games</span>
+					<span class="badge badge-light">GUI programming</span>
 					<span class="badge badge-light">Listeners</span>
 				</h6>
 				<p>Second part of AP Computer Science final project during high school. Replica of the original game, also built from scratch. Another exercise for making graphical games and handling keyboard input.</p>
@@ -203,9 +203,9 @@
 			<div class="col">
 				<h3><a href="https://github.com/jasonkimprojects/java-blackjack" class="name">Blackjack (Java)</a></h3>
 				<h6>
-					<span class="badge badge-light">Object oriented programming</span> 
-					<span class="badge badge-light">Testing</span> 
-					<span class="badge badge-light">Data structures</span> 
+					<span class="badge badge-light">Object oriented programming</span>
+					<span class="badge badge-light">Testing</span>
+					<span class="badge badge-light">Data structures</span>
 					<span class="badge badge-light">Exception handling</span>
 				</h6>
 				<p>Yet another AP Computer Science project, and the first game I made from scratch. Played on the command line, and supports multiple human players as well as naive computer players.</p>
