Updating with JasonDrive info; TODO Korean and Spanish

--- a/projects.html
+++ b/projects.html
@@ -97,6 +97,19 @@
 		</div>
 		<div class="row project">
 			<div class="col">
+				<h3><a href="https://github.com/jasonkimprojects/jasondrive" class="name">JasonDrive (Python/Flask, React, Bash)</a></h3>
+				<h6>
+					<span class="badge badge-light">Full stack web development</span>
+					<span class="badge badge-light">Network file server</span>
+					<span class="badge badge-light">Client-side dynamic pages</span>
+				</h6>
+				<p>
+					This is what happens when Jason gets bored over winter break, on the last couple days of 2019. This is a very bungled version of Google Drive without the fancy backend magic such as distributed servers and filesystems, but still full stack. You can download and upload files, create and browse directories, and delete files on the server's local storage all from the comfort of your web browser. I handled the backend with SQLite and Python/Flask for the database and API, plus the front end with React (which displays all the files and buttons).
+				</p>
+			</div>
+		</div>
+		<div class="row project">
+			<div class="col">
 				<h3><a href="https://jasonkimprojects.github.io/zerosteg/" class="name">ZeroSteg (HTML, CSS, JavaScript)</a></h3>
 				<h6>
 					<span class="badge badge-light">Steganography</span>
