Updated with languages!

--- a/korean/projects-kr.html
+++ b/korean/projects-kr.html
@@ -95,6 +95,19 @@
 		</div>
 		<div class="row project">
 			<div class="col">
+				<h3><a href="https://github.com/jasonkimprojects/jasondrive" class="name">JasonDrive (Python/Flask, React, Bash)</a></h3>
+				<h6>
+					<span class="badge badge-light">풀 스택 웹 개발</span>
+					<span class="badge badge-light">네트워크 기반 자료 서버</span>
+					<span class="badge badge-light">클라이언트 사이드 스크립트</span>
+				</h6>
+				<p>
+					2019년의 마지막 며칠 사이, 겨울방학 중에 심심한 사이에 재미삼아 만들게 되었습니다. 구글 드라이브에서의 복잡한 기능, 예를 들어 분산된 서버랑 파일 저장소는 빠진 기초적인 버전이지만 여전히 풀 스택으로 만드는 것을 목적으로 삼았습니다. 이 서버는 파일 올리기, 내려받기, 지우기, 그리고 폴더를 새로 만들고 열람하는 것이 가능합니다. 즉, 서버 저장소에 있는 파일을 당신의 웹 브라우저로 마음껏 관리하실 수 있습니다. 데이터베이스와 서버의 API 작업은 SQLite와 Python/Flask의 조합으로 완성하였으며, 사용자 인터페이스는 React로 구현했습니다.
+				</p>
+			</div>
+		</div>
+		<div class="row project">
+			<div class="col">
 				<h3><a href="https://jasonkimprojects.github.io/zerosteg/" class="name">ZeroSteg (HTML, CSS, JavaScript)</a></h3>
 				<h6>
 					<span class="badge badge-light">스테가노그래피</span>
