Updated with W20 work

--- a/coursework.html
+++ b/coursework.html
@@ -95,6 +95,47 @@
 				<hr>
 			</div>
 		</div>
+		<div class="row course">
+			<div class="col">
+				<h3>445, Introduction to Machine Learning</h3>
+				<p><a href="https://eecs445-f16.github.io/" class="syllabus">Link to syllabus</a></p>
+				<p>
+					<b>Projects in Python:</b>
+				</p>
+				<ul>
+					<li>
+						<p>
+							Linear regression using stochastic gradient descent (SGD).
+						</p>
+					</li>
+					<li>
+						<p>
+							Decision tree learning with ensemble methods of bagging and random forests.
+						</p>
+					</li>
+					<li>
+						<p>
+							K-means and K-means++ clustering.
+						</p>
+					</li>
+					<li>
+						<p>
+							Clustering with a Gaussian mixture model using the expectation maximization algorithm.
+						</p>
+					</li>
+					<li>
+						<p>
+							Classification of RateMyProfessor reviews with a kernelized support vector machine. Involved feature extraction, k-fold cross validation, performance metrics, hyperparameter and kernel selection, loss functions and regularization, and accounting for class imbalance.
+						</p>
+					</li>
+					<li>
+						<p>
+							Classification of food images with a convolutional neural network, and transfer learning with an autoencoder.
+						</p>
+					</li>
+				</ul>
+			</div>
+		</div>
     <div class="row course">
       <div class="col">
         <h3>485, Web Systems</h3>
