--- a/index.html
+++ b/index.html
@@ -130,15 +130,22 @@
 					<h2 style="color: #FFA500">Hi, I'm Jason!</h2>
 					<p>For official purposes, my legal first name is Jong Sung. I go by Jason, nevertheless, for two reasons: it’s easier to pronounce, and most websites that parse my name delimit the space and call me Jong. Call me by whatever is easiest for you! My pronouns are <b>he, him, and his.</b></p>
 					<br>
-					<h2>I'm a Junior</h2>
-					<p>At the University of Michigan in Ann Arbor, MI. I study Computer Science through the College of Engineering, and minor in Biology through the College of Literature, Science, and the Arts. I am passionate about cybersecurity and medical software development (bioinformatics, computer vision and ML, databases, etc.), and one day I hope to contribute to the automation of diagnosing and treating diseases for accessible and affordable healthcare worldwide.</p>
+					<h2>I'm a senior</h2>
+					<p>At the University of Michigan in Ann Arbor, MI. I study Computer Science through the College of Engineering, and minor in Biology through the College of Literature, Science, and the Arts.</p>
+					<p>I am passionate about cybersecurity and medical software development (bioinformatics, computer vision, and machine learning), and one day I hope to contribute to the automation of diagnosing and treating diseases for accessible and affordable healthcare worldwide - while keeping protected health information where it needs to be.</p>
+					<p>After graduation, I plan to deepen my knowledge of Computer Science further by enrolling in a doctoral program.</p>
 					<br>
 					<h2>I develop</h2>
-					<p>In C++, C, Java, and Python proficiently. Writing this website has improved my HTML and CSS skills (which I have picked up more with Web Systems). Some more languages that I speak here and there are Bash, MATLAB, JavaScript (React and jQuery), SQL, and some flavors of assembly (x86, MIPS, ARMv8).</p>
+					<p>In C++, C, Java, and Python (Flask, PyTorch, scikit-learn, SciPy) proficiently. Writing this website has improved my HTML and CSS skills (which I have picked up more with Web Systems). Some more languages that I speak here and there are Bash, MATLAB, JavaScript (React and jQuery), SQL, and some flavors of assembly (x86, MIPS, ARMv8).</p>
 					<br>
+					<h2>For Summer 2020</h2>
+					<p>I will be continuing my research on evaluating the adaptability of open-source intrusion detection systems with the Multidisciplinary Design Program (MDP) sponsored by Aptiv PLC, with the generous support of the MDP Summer Research Fellowship. While I had originally planned to intern for Lear Corporation's cybersecurity team, this was unfortunately canceled and tentatively postponed to Summer 2021 due to COVID-19.</p>
+					<!--
 					<h2>My website</h2>
 					<p>Is also available in 한국어 (Korean), my mother tongue alongside English, as well as Español (Spanish) which I <i>kind of</i> speak. Feel free to grab a copy of my resume or contact me through the links on the left!</p>
+				-->
 					<!-- Language selector buttons -->
+					<!--
 					<div class="container" style="text-align: center; margin-top: 50px; margin-bottom: 30px">
 						<div class="row">
 							<div class="col-md-12">
@@ -150,6 +157,7 @@
 						    </div>
 					    </div>
 					</div>
+				-->
 					<hr>
 					<h6><small>Background image credits: Hedaetul Islam (<a href="https://www.pexels.com/@hedaetul">https://www.pexels.com/@hedaetul)</a></small></h6>
 					<h6><small>Made from scratch with passion, with the help of Bootstrap for mobile and desktop compatibility.</small></h6>
