Projects to Workshop

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 						<a class="nav-link navi" href="coursework.html"><h3>Academics</h3></a>
 					</div>
 					<div class="col-sm-4">
-						<a class="nav-link navi" href="projects.html"><h3>Projects</h3></a>
+						<a class="nav-link navi" href="projects.html"><h3>Workshop</h3></a>
 					</div>
 				</div>
 			</div>
@@ -104,7 +104,7 @@
 						  <a class="nav-link link" href="mailto:nosajmik@umich.edu"><b>nosajmik@umich.edu</b></a>
 						</li>
 						<li class="nav-item">
-						  <a class="nav-link link" href="files/resume.pdf" download><b>Resume</b></a>
+						  <a class="nav-link link" href="files/resume.pdf"><b>Resume</b></a>
 						</li>
 						<li class="nav-item">
 						  <a class="nav-link link" href="https://github.com/jasonkimprojects"><b>GitHub</b></a>
