--- a/coursework.html
+++ b/coursework.html
@@ -72,7 +72,7 @@
 						<a class="nav-link" href="coursework.html" style="color: #FFA500"><h3>Academics</h3></a>
 					</div>
 					<div class="col-sm-4">
-						<a class="nav-link" href="projects.html"><h3>Projects</h3></a>
+						<a class="nav-link" href="projects.html"><h3>Workshop</h3></a>
 					</div>
 				</div>
 			</div>
