--- a/projects.html
+++ b/projects.html
@@ -55,6 +55,9 @@
 			margin: auto;
 			max-width: 700px;
 		}
+		li {
+			font-size: 30px;
+		}
 	</style>
 </head>
 <body>
@@ -72,7 +75,7 @@
 						<a class="nav-link" href="coursework.html"><h3>Academics</h3></a>
 					</div>
 					<div class="col-sm-4">
-						<a class="nav-link" href="projects.html" style="color: #FFA500"><h3>Projects</h3></a>
+						<a class="nav-link" href="projects.html" style="color: #FFA500"><h3>Workshop</h3></a>
 					</div>
 				</div>
 			</div>
@@ -84,7 +87,7 @@
 			<div class="col">
 				<!-- Header for project description -->
 				<div class="alert alert-success">
-					<p style="margin-bottom: 0px">The following is a list of my personal projects and group projects where I have contributed significantly. Their source code can be viewed <a href="https://github.com/jasonkimprojects?tab=repositories" style="color: #FFA500">here</a> in my GitHub account. Clicking on the title of each project links to its repository.</p>
+					<p style="margin-bottom: 0px">The following is a list of my personal projects and group projects where I have contributed significantly. Their source code can be viewed <a href="https://github.com/jasonkimprojects?tab=repositories" style="color: #FFA500">here</a> in my GitHub account. Clicking on the title of each project links to its repository. Some of my supplementary documents linked from my resume also live here.</p>
 				</div>
 			</div>
 		</div>
@@ -221,6 +224,27 @@
 					<span class="badge badge-light">Exception handling</span>
 				</h6>
 				<p>Yet another AP Computer Science project, and the first game I made from scratch. Played on the command line, and supports multiple human players as well as naive computer players.</p>
+			</div>
+		</div>
+		<div class="row project">
+			<div class="col">
+				<h1><b>Documents</b></h1>
+				<hr>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col">
+				<ul>
+					<li>
+						<h5><a href="files/388_f19_evals.pdf">EECS 388 Course Evaluations, Fall 2019</a></h5>
+					</li>
+					<li>
+						<h5><a href="files/388_w20_evals.pdf">EECS 388 Course Evaluations, Winter 2020</a></h5>
+					</li>
+					<li>
+						<h5><a href="files/MDP_w20_peerreview.pdf">Multidisciplinary Design Program, Peer Review</a></h5>
+					</li>
+				</ul>
 			</div>
 		</div>
 	</div>
