Replace old resume with CV

--- a/korean/index-kr.html
+++ b/korean/index-kr.html
@@ -94,7 +94,7 @@
 					<img src="../img/profile.JPG" class="img-fluid" alt="Profile Picture" style="border: 5px solid">
 					<hr>
 					<h3>연락처</h3>
-					<!-- Buttons for contact info plus resume -->
+					<!-- Buttons for contact info plus CV -->
 					<ul class="nav nav-pills flex-column" style="margin: auto">
 						<li class="nav-item">
 						  <a class="nav-link" id="link-cell"><b>+1 (224) 200-6674</b></a>
@@ -103,7 +103,7 @@
 						  <a class="nav-link link" href="mailto:nosajmik@umich.edu"><b>nosajmik@umich.edu</b></a>
 						</li>
 						<li class="nav-item">
-						  <a class="nav-link link" href="../files/resume.pdf" download><b>이력서 (영문)</b></a>
+						  <a class="nav-link link" href="../files/cv.pdf" download><b>Curriculum Vitae</b></a>
 						</li>
 						<li class="nav-item">
 						  <a class="nav-link link" href="https://github.com/jasonkimprojects"><b>GitHub</b></a>
@@ -132,7 +132,7 @@
 					<p>C++, C, 그리고 Java어로 주로, 그리고 가장 오랬동안 하였습니다. 최근에는 수업 내 프로젝트 여러 가지로 Python을 많이 습득하는 중입니다. 또한 이 웹사이트를 만들며 HTML과 CSS를 복습하고 응용해 나가고 있습니다. 능숙하지는 않지만 어느 정도 지식을 가지고 있는 언어는 Bash, MATLAB, JavaScript (React 그리고 jQuery), SQL 그리고 몇 가지 종류의 어셈블리어 (x86, MIPS, ARMv8) 가 있습니다.</p>
 					<br>
 					<h2>이 웹사이트는</h2>
-					<p>한국어와 같이 저의 모국어인 영어 (English), 그리고 중간 정도의 구사 능력이 있는 스페인어 (Español) 로도 열람하실 수 있습니다. 제 포트폴리오에 관심이 있으시다면, 화면 좌측의 링크를 통해 이력서를 내려받으시거나 연락을 주시기 바랍니다!</p>
+					<p>한국어와 같이 저의 모국어인 영어 (English), 그리고 중간 정도의 구사 능력이 있는 스페인어 (Español) 로도 열람하실 수 있습니다. 제 포트폴리오에 관심이 있으시다면, 화면 좌측의 링크를 통해 Curriculum Vitae를 내려받으시거나 연락을 주시기 바랍니다!</p>
 					<!-- Language selector buttons -->
 					<div class="container" style="text-align: center; margin-top: 50px; margin-bottom: 30px">
 						<div class="row">
