--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					<img src="img/profile.JPG" class="img-fluid" alt="Profile Picture" style="border: 5px solid">
 					<hr>
 					<h3>Contact me:</h3>
-					<!-- Buttons for contact info plus resume -->
+					<!-- Buttons for contact info plus CV -->
 					<ul class="nav nav-pills flex-column" style="margin: auto">
 						<li class="nav-item">
 						  <a class="nav-link" id="link-cell"><b>+1 (224) 200-6674</b></a>
@@ -105,7 +105,7 @@
 						  <a class="nav-link link" href="mailto:nosajmik@umich.edu"><b>nosajmik@umich.edu</b></a>
 						</li>
 						<li class="nav-item">
-						  <a class="nav-link link" href="files/resume.pdf" download><b>Resume</b></a>
+						  <a class="nav-link link" href="files/cv.pdf" download><b>Curriculum Vitae</b></a>
 						</li>
 						<li class="nav-item">
 						  <a class="nav-link link" href="https://github.com/jasonkimprojects"><b>GitHub</b></a>
@@ -137,7 +137,7 @@
 					<p>In C++, C, Java, and Python proficiently. Writing this website has improved my HTML and CSS skills (which I have picked up more with Web Systems). Some more languages that I speak here and there are Bash, MATLAB, JavaScript (React and jQuery), SQL, and some flavors of assembly (x86, MIPS, ARMv8).</p>
 					<br>
 					<h2>My website</h2>
-					<p>Is also available in 한국어 (Korean), my mother tongue alongside English, as well as Español (Spanish) which I <i>kind of</i> speak. Feel free to grab a copy of my resume or contact me through the links on the left!</p>
+					<p>Is also available in 한국어 (Korean), my mother tongue alongside English, as well as Español (Spanish) which I <i>kind of</i> speak. Feel free to grab a copy of my CV or contact me through the links on the left!</p>
 					<!-- Language selector buttons -->
 					<div class="container" style="text-align: center; margin-top: 50px; margin-bottom: 30px">
 						<div class="row">
