--- a/index.html
+++ b/index.html
@@ -131,14 +131,11 @@
 					<br>
 					<h2>I'm a senior</h2>
 					<p>At the University of Michigan in Ann Arbor, MI. I study Computer Science through the College of Engineering, and minor in Biology through the College of Literature, Science, and the Arts.</p>
-					<p>I am passionate about cybersecurity and medical software development (bioinformatics, computer vision, and machine learning), and one day I hope to contribute to the automation of diagnosing and treating diseases for accessible and affordable healthcare worldwide - while keeping protected health information where it needs to be.</p>
-					<p>After graduation, I plan to deepen my knowledge of Computer Science further by enrolling in a doctoral program.</p>
+					<p> I am interested in cybersecurity and multidisciplinary research, especially in the fields of genetics and biometrics. For the upcoming year, I am seeking to pursue a Ph.D. program to nurture my fascination and skills for research much further. </p>
 					<br>
 					<h2>I develop</h2>
 					<p>In C++, C, Java, and Python (Flask, PyTorch, scikit-learn, SciPy) proficiently. Writing this website has improved my HTML and CSS skills (which I have picked up more with Web Systems). Some more languages that I speak here and there are Bash, MATLAB, JavaScript (React and jQuery), SQL, and some flavors of assembly (x86, MIPS, ARMv8).</p>
 					<br>
-					<h2>For Summer 2020</h2>
-					<p>I will be continuing my research on evaluating the adaptability of open-source intrusion detection systems with the Multidisciplinary Design Program (MDP) sponsored by Aptiv PLC, with the generous support of the MDP Summer Research Fellowship. While I had originally planned to intern for Lear Corporation's cybersecurity team, this was unfortunately canceled and tentatively postponed to Summer 2021 due to COVID-19.</p>
 					<!--
 					<h2>My website</h2>
 					<p>Is also available in 한국어 (Korean), my mother tongue alongside English, as well as Español (Spanish) which I <i>kind of</i> speak. Feel free to grab a copy of my CV or contact me through the links on the left!</p>
