temporary fixes for phd

--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
 			margin: auto;
 			max-width: 700px;
 		}
+		a {
+			color: #d18a06;
+		}
+		a:hover {
+			color: #ffa500;
+		}
 	</style>
 </head>
 <body>
@@ -92,16 +98,13 @@
 		    <div class="col-md-4" style="text-align: center">
 		    	<!-- Trick to space out the left column from the right -->
 		    	<div class="col-md-12">
-					<img src="img/profile.JPG" class="img-fluid" alt="Profile Picture" style="border: 5px solid">
+					<img src="img/profile.jpeg" class="img-fluid" alt="Profile Picture" style="border: 5px solid">
 					<hr>
 					<h3>Contact me:</h3>
 					<!-- Buttons for contact info plus CV -->
 					<ul class="nav nav-pills flex-column" style="margin: auto">
 						<li class="nav-item">
-						  <a class="nav-link" id="link-cell"><b>+1 (224) 200-6674</b></a>
-						</li>
-						<li class="nav-item">
-						  <a class="nav-link link" href="mailto:nosajmik@umich.edu"><b>nosajmik@umich.edu</b></a>
+						  <a class="nav-link link" href="mailto:nosajmik@gatech.edu"><b>nosajmik@gatech.edu</b></a>
 						</li>
 						<li class="nav-item">
 						  <a class="nav-link link" href="files/cv.pdf" download><b>Curriculum Vitae</b></a>
@@ -115,9 +118,6 @@
 						<li class="nav-item">
 						  <a class="nav-link link" href="https://keybase.io/nosajmik"><b>Keybase</b></a>
 						</li>
-						<li class="nav-item">
-						  <a class="nav-link link" href="http://rosalind.info/users/nosajmik/"><b>Rosalind</b></a>
-						</li>
 					</ul>
 					<!-- Only show line on small screens -->
 					<hr class="d-md-none" style="margin-bottom: 30px">
@@ -129,30 +129,16 @@
 					<h2 style="color: #FFA500">Hi, I'm Jason!</h2>
 					<p>For official purposes, my legal first name is Jong Sung. I go by Jason, nevertheless, for two reasons: it’s easier to pronounce, and most websites that parse my name delimit the space and call me Jong. Call me by whatever is easiest for you! My pronouns are <b>he, him, and his.</b></p>
 					<br>
-					<h2>I'm a senior</h2>
-					<p>At the University of Michigan in Ann Arbor, MI. I study Computer Science through the College of Engineering, and minor in Biology through the College of Literature, Science, and the Arts.</p>
-					<p> I am interested in cybersecurity and multidisciplinary research, especially in the fields of genetics and biometrics. For the upcoming year, I am seeking to pursue a Ph.D. program to nurture my fascination and skills for research much further. </p>
+
+					<h2>I am a...</h2>
+					<p>First year PhD student at <a href="https://www.gatech.edu/">Georgia Tech</a>, advised by Prof. <a href="https://www.cc.gatech.edu/~genkin/">Daniel Genkin</a>. I am working on side-channel attacks, most recently on mounting <a href="https://spectreattack.com/">Spectre</a> on Google Chrome in spite of its several countermeasures. Prior to Georgia Tech, I earned my bachelor's degree at the <a href="https://umich.edu/">University of Michigan</a>.</p>
+
 					<br>
-					<h2>I develop</h2>
-					<p>In C++, C, Java, and Python (Flask, PyTorch, scikit-learn, SciPy) proficiently. Writing this website has improved my HTML and CSS skills (which I have picked up more with Web Systems). Some more languages that I speak here and there are Bash, MATLAB, JavaScript (React and jQuery), SQL, and some flavors of assembly (x86, MIPS, ARMv8).</p>
+
+					<h2>My apologies</h2>
+					<p>For the mess that is my website currently. This was my site from undergrad which had been neglected for over a year, and it has been an incredibly busy start to graduate school. I will have a proper website up soon, but almost everything that you see here is grossly outdated.</p>
 					<br>
-					<!--
-					<h2>My website</h2>
-					<p>Is also available in 한국어 (Korean), my mother tongue alongside English, as well as Español (Spanish) which I <i>kind of</i> speak. Feel free to grab a copy of my CV or contact me through the links on the left!</p>
-					<!-- Language selector buttons -->
-					<!--
-					<div class="container" style="text-align: center; margin-top: 50px; margin-bottom: 30px">
-						<div class="row">
-							<div class="col-md-12">
-						    	<div class="btn-group">
-						    		<a href="#" role="button" class="btn btn-light" style="color: #FFA500">English</a>
-						    		<a href="korean/index-kr.html" role="button" class="btn btn-light">한국어</a>
-						    		<a href="spanish/index-es.html" role="button" class="btn btn-light">Español</a>
-						    	</div>
-						    </div>
-					    </div>
-					</div>
-				-->
+
 					<hr>
 					<h6><small>Background image credits: Hedaetul Islam (<a href="https://www.pexels.com/@hedaetul">https://www.pexels.com/@hedaetul)</a></small></h6>
 					<h6><small>Made from scratch with passion, with the help of Bootstrap for mobile and desktop compatibility.</small></h6>
